Complete the curriculum: root README and final verification (T24)
Root README links all 22 modules in order with a one-line description each,
documents JDK 27 setup for macOS, Linux and Windows, explains the solutions tree
and the six EXPECT markers, and states the verified repository totals.

SPEC.md now records all eight success criteria as checked, each with how it was
verified rather than just that it was, and resolves the three open questions.

The final structural pass found one real gap: modules/22-whats-new was missing
the "Coming From Another Language" template section. Added.

Verified state: 22 modules, 105 examples, 25 reference solutions, 130 files all
behaving as their markers declare, whole-repository run in about 70 seconds. No
build file, no third-party import, no non-English content.

SPEC.md also records the corrections that the no-inventing-claims boundary
surfaced during implementation, including an example that disproved its own
assertion when run and a preview history that had two more rounds than assumed.

Closes #24

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>